# plunder

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  data.csv  data.json  df  docker_entrypoint.sh  domain.h  generate  generate.cpp  includes.h  library_functions.txt  manifest.xml  out4.txt  pf.jl  pf.sh  robot.h  robotMod.h  settings.h  settings.txt  system.h  test_library.json  toy.json  translateSettings.cpp  ts  utils.h  utils.py
1D-target/: README.md  domain.h  emdips_operations.json  policy_gen.py  robot.h  robotSets.h  run_model_bc+.py  run_model_bc.py  settings.h  temp.csv
1D-target-copy/: robot.h  settings.h
1D-target-copy/sim/: data0.csv  data10.csv  data7.csv  data8.csv
1D-target/example_data/: data25.csv  data6.csv
1D-target/gt_asp/: ACC_ACC.json  ACC_CON.json  CON_DEC.json
1D-target/sim/: data0.csv  data1.csv  data10.csv  data2.csv  data3.csv  data4.csv  data5.csv  data6.csv  data7.csv  data8.csv  data9.csv
2D-highway-env/: README.md  domain.h  emdips_operations.json  robot.h  settings.h
2D-highway-env/gt_asp/: FASTER_LANE_LEFT.json  FASTER_LANE_RIGHT.json  LANE_LEFT_FASTER.json  LANE_LEFT_LANE_RIGHT.json  LANE_RIGHT_SLOWER.json  SLOWER_LANE_LEFT.json
2D-highway-env/hand-gen/: data0.csv  data1.csv  highway2d-hand.py
2D-highway-env/human-gen/: controller_test.py  data0.csv  data1.csv  data10.csv  data11.csv  data12.csv  data13.csv  data14.csv  data15.csv  data16.csv  data17.csv  data18.csv  data2.csv  data3.csv  data4.csv  data5.csv  data6.csv  data7.csv  data8.csv  data9.csv  highway2d.py  test.py
2D-highway-env/python-gen/: data0.csv  data1.csv  data10.csv  data11.csv  data12.csv  data13.csv  data14.csv  data15.csv  data16.csv  data17.csv  data18.csv  data19.csv  data2.csv  data20.csv  data21.csv  data22.csv  data23.csv  data24.csv  data25.csv  data26.csv  data27.csv  data28.csv  data29.csv  data3.csv  data4.csv  data5.csv  data6.csv  data7.csv  data8.csv  data9.csv  highway2d.py  run_model_bc+.py  run_model_bc.py  run_rl.py  synth_asp.py  train_rl.py
2D-highway-manual/: README.md  robot.h  settings.h
2D-highway-manual/human-gen/: data0.csv  data1.csv  data10.csv  data11.csv  data12.csv  data13.csv  data14.csv  data15.csv  data16.csv  data17.csv  data18.csv  data2.csv  data3.csv  data4.csv  data5.csv  data6.csv  data7.csv  data8.csv  data9.csv  highway2d.py  run_model_bc+.py  run_model_bc.py  synth_asp.py  temp.csv
2D-merge/: README.md  domain.h  emdips_operations.json  robot.h  settings.h
2D-merge-manual/: README.md  emdips_operations.json  robot.h  robotSets.h  settings.h
2D-merge-manual/human-gen/: data0.csv  data1.csv  data10.csv  data11.csv  data12.csv  data13.csv  data14.csv  data15.csv  data16.csv  data17.csv  data18.csv  data19.csv  data2.csv  data3.csv  data4.csv  data5.csv  data6.csv  data7.csv  data8.csv  data9.csv  merge.py  run_model_bc+.py  run_model_bc.py  synth_asp.py  temp.csv
2D-merge-rand/: robot.h  settings.h
2D-merge-rand/python-gen/: data0.csv  data10.csv  data12.csv  data13.csv  data14.csv  data16.csv  data18.csv  data2.csv  data7.csv  merge.py
2D-merge/gen-easy/: data12.csv  data2.csv  data20.csv  data8.csv
2D-merge/gen-hard/: data11.csv  data13.csv  data17.csv  data19.csv  data21.csv  data22.csv  data27.csv  data28.csv  data4.csv  (+2 more)
accSim/: README.md  asp_ex.cpp  asps.h  data.csv  data.json  generate.cpp  generate.h  ideal.txt  robotSets.h
baselines/: README.md  error_inducer.py  misc_plotter.py  noise_plotter.py
benchmarks/: main.py  misc_plotter.py
docs/: _config.yml  index.md
examples/: del_1.json  del_3.json  toy.py
highway-env/: highway.py  highway1d.py  highway2d.py  obs_out.csv
ops/: social_test.json
panda-pick-place/: README.md  domain.h  emdips_operations.json  robot.h  settings.h
panda-stack/: README.md  domain.h  emdips_operations.json  robot.h  settings.h
particleFilter/: README.md  pf.cpp  pf.h  pf_runner.cpp  pf_runner.h  plotter.py
pf/: resamplers.h  rv_eval.h
pf-examples/: accSimPF.h  accSim_BSmodel.h  out  svol_apf.h  svol_bs_withcovs.h
pf-test/: accSimPF.h  accSim_BSmodel.h  data_reader.h  main.cpp  out
pf_custom/: out  pf  pf.cpp  pf.csv  pf.sh  pf_runner.cpp  plotter.py  test.cpp  unit_test.cpp
pips/: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  docker_build.sh  script.sh
pips/examples/: data.json  del_2.json  del_4.json  toy.json
pips/examples/emdips/examples/: pf0-0.csv  pf0-1.csv  pf0-10.csv  pf0-11.csv  pf0-12.csv  pf0-13.csv  pf0-14.csv  pf0-2.csv  pf0-3.csv  pf0-4.csv  pf0-5.csv  pf0-6.csv  pf0-7.csv  pf0-8.csv  pf0-9.csv
pips/ops/: emdips_test.json  simple_atk.json  test_library.json
pips/scripts/: merge_demos.py  run_synth.sh
pips/src/: emdips-l3.cpp  ldips-l3.cpp  main.cpp  srtr.cpp  test_save.cpp
pips/src/ast/: ast.cpp  ast.hpp  enumeration.cpp  enumeration.hpp  library_functions.cpp  library_functions.hpp  library_functions_tests.cpp  parsing.cpp  synthesis.cpp  synthesis.hpp
pips/src/optimizer/: optimizer.py  optimizer_runner.py
pips/src/sketches/: leading_human_sketch.cpp
pips/src/utils/: nd_bool_array.cpp  nd_bool_array.hpp  nd_bool_array_tests.cpp
pips/src/visitors/: deepcopy_visitor.cpp  deepcopy_visitor.hpp  deepcopy_visitor_tests.cpp  fillhole_visitor.cpp  fillhole_visitor.hpp  interp_visitor.cpp  interp_visitor.hpp  print_visitor.cpp  print_visitor.hpp  tosmtlib_visitor.cpp  tosmtlib_visitor.hpp  tosmtopt_visitor.cpp  tosmtopt_visitor.hpp
pips/submodules/: FindZ3.cmake
pips/submodules/amrl_shared_lib/: Makefile
pips/submodules/gflags/: CTestTestfile.cmake  gflags-nonamespace-targets.cmake  gflags-targets.cmake
pips/submodules/gflags/test/: CTestTestfile.cmake
pips/submodules/json/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile  nlohmann_jsonTargets.cmake
scipy-tests/: initial_test.py  optimizer.py  optimizer_runner.cpp  optimizer_runner.py  py_function.py
scripts/: format.sh  format_all.sh  format_json.py  record_demo.sh
simulation/: README.md  generate.cpp  generate.h
src/: dipr.cpp  main.cpp  srtr.cpp  test_save.cpp
synthesis/: README.md  em.cpp  mess.txt
(+1192 files in other folders)
